--- a/final-project/src/components/TransfersList/TransfersList.scss
+++ b/final-project/src/components/TransfersList/TransfersList.scss
@@ -1,7 +1,9 @@
 .outgoing-amount {
-    color: rgb(151, 0, 0);
+    font-weight: bold;
+    color: #AF2A2A;
 }
 
 .incoming-amount {
-    color: rgb(0, 151, 0);
+    font-weight: bold;
+    color: #428239;
 }
