--- a/final-project/src/components/LabelGroup/LabelGroup.scss
+++ b/final-project/src/components/LabelGroup/LabelGroup.scss
@@ -4,10 +4,12 @@
     .label-title {
         font-weight: bold;
         font-size: 1em;
+        margin-bottom: 0.5em;
     }
 
     .label-description {
         font-size: 1em;
         margin-left: 1em;
+        margin-bottom: 0.5em;
     }
 }
