--- a/final-project/src/components/Navbar/Navbar.scss
+++ b/final-project/src/components/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
     display: none;
+    z-index: 50;
     padding: 1em;
     background: #fff;
     border-radius: 0.5em;
@@ -7,6 +8,7 @@
 
     .nav-btn-collapse {
         display: none;
+        font-size: 1.1em;
         transform: scale(0);
         transition: all 0.2s ease-in-out;
     }
@@ -14,135 +16,13 @@
     .navbar-brand {
         font-weight: bold;
         font-size: 1.5em;
-
     }
-
 }
 
 .navbar-btn {
     box-shadow: none;
-    outline: none !important;
+    outline: none;
     border: none;
-}
-
-#sidebar {
-    margin-left: 0;
-    min-width: 250px;
-    max-width: 250px;
-    height: 100vh;
-    background: #2F323A;
-    position: fixed;
-    top: 0;
-    left: 0;
-    /* top layer */
-    z-index: 9999;
-    color: #bbb;
-    transition: all 0.2s ease-in-out;
-
-    .btn-logout-container {
-        display: flex;
-        
-        .btn-logout {
-            align-self: flex-end;
-            background-color: transparent; /* Green */
-            border: none;
-            color: #bbb;
-            width: 100%;
-            text-align: left;
-            padding: 1.2em;
-            padding-left: 1.5em;
-            text-decoration: none;
-            display: inline-block;
-            font-weight: bold;
-            font-size: 0.9em;
-    
-            &:hover {
-                background-color: #bbb;
-                color: #AF2A2A;
-            }
-    
-            i {
-                margin: 0 0.5em;
-            }
-        }
-    }
-}
-
-#sidebar.active {
-    margin-left: 0;
-}
-
-#sidebar .sidebar-header {
-    padding: 0;
-    padding-bottom: 2em;
-    border-bottom: 1px solid #bbb;
-
-    .header-btn-close {
-        margin: 1em;
-        display: flex;
-        justify-content: flex-end;
-        transform: scale(0);
-    }
-
-    .header-title {
-        display: flex;
-        width: 100%;
-        height: 100%;
-
-        h3 {
-            text-align: center;
-            font-size: 2em;
-            padding-bottom: 0.5em;
-            display: block;
-            width: 100%;
-            align-self: flex-end;
-        }
-    }
-}
-
-#sidebar ul.components {
-
-    .sidebar-link {
-        text-decoration: none;
-    }
-
-}
-
-#sidebar ul li a {
-    padding: 1.2em 1.5em;
-    font-size: 0.9em;
-    font-weight: bold;
-    display: block;
-    text-decoration: none;
-    color: #bbb;
-    border-bottom: 1px solid #bbb;
-    i {
-        margin: 0.5em;
-    }
-}
-
-#sidebar ul li a:hover {
-    color: #2F323A;
-    background-color: #bbb;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-ul ul {
-    
-    a {
-        background: white;
-    }
 }
 
 @media (max-width:899px) {
@@ -153,19 +33,6 @@ ul ul {
             display: block;
             margin-right: 1em;
             transform: scale(1);
-        }
-    }
-
-    #sidebar {
-        margin-left: -250px;
-
-        .sidebar-header {
-            
-            .header-btn-close {
-                transform: scale(1);
-                display: flex;
-                justify-content: flex-end;
-            }
         }
     }
 }
