--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,15 +1,74 @@
 .sidebar {
+    top: 0;
+    left: 0;
+    z-index: 100;
+    color: #bbb;
+    position: fixed;
     margin-left: 0;
     min-width: 250px;
     max-width: 250px;
     height: 100vh;
     background: #2F323A;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    color: #bbb;
     transition: all 0.2s ease-in-out;
+
+    &.active {
+        margin-left: 0;
+    }
+
+    .sidebar-header {
+        padding: 0;
+        padding-bottom: 2em;
+        border-bottom: 1px solid #bbb;
+    
+        .header-btn-close {
+            margin: 1em;
+            display: flex;
+            justify-content: flex-end;
+            transform: scale(0);
+        }
+    
+        .header-title {
+            display: flex;
+            width: 100%;
+            height: 100%;
+    
+            h3 {
+                text-align: center;
+                font-size: 2em;
+                padding-bottom: 0.5em;
+                display: block;
+                width: 100%;
+                align-self: flex-end;
+            }
+        }
+    }
+
+    .components {
+
+        .sidebar-link {
+            text-decoration: none;
+
+            a {
+                padding: 1.2em 1.5em;
+                font-size: 0.9em;
+                font-weight: bold;
+                display: block;
+                text-decoration: none;
+                color: #bbb;
+                border-bottom: 1px solid #bbb;
+
+                &:hover {
+                    color: #2F323A;
+                    background-color: #bbb;
+                }
+                
+                i {
+                    margin: 0.5em;
+                }
+            }
+        }
+    
+    }
 
     .btn-logout-container {
         display: flex;
@@ -40,83 +99,6 @@
                 margin: 0 0.5em;
             }
         }
-    }
-}
-
-.sidebar.active {
-    margin-left: 0;
-}
-
-.sidebar .sidebar-header {
-    padding: 0;
-    padding-bottom: 2em;
-    border-bottom: 1px solid #bbb;
-
-    .header-btn-close {
-        margin: 1em;
-        display: flex;
-        justify-content: flex-end;
-        transform: scale(0);
-    }
-
-    .header-title {
-        display: flex;
-        width: 100%;
-        height: 100%;
-
-        h3 {
-            text-align: center;
-            font-size: 2em;
-            padding-bottom: 0.5em;
-            display: block;
-            width: 100%;
-            align-self: flex-end;
-        }
-    }
-}
-
-.sidebar ul.components {
-
-    .sidebar-link {
-        text-decoration: none;
-    }
-
-}
-
-.sidebar ul li a {
-    padding: 1.2em 1.5em;
-    font-size: 0.9em;
-    font-weight: bold;
-    display: block;
-    text-decoration: none;
-    color: #bbb;
-    border-bottom: 1px solid #bbb;
-    i {
-        margin: 0.5em;
-    }
-}
-
-.sidebar ul li a:hover {
-    color: #2F323A;
-    background-color: #bbb;
-}
-
-a[data-toggle="collapse"] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-ul ul {
-    
-    a {
-        background: white;
     }
 }
 
