--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -25,8 +25,6 @@
 
         .login-form-container-content {
             align-self: center;
-            
-            width: 80%;
             max-width: 1200px;
             background-color: #fff;
 
@@ -36,15 +34,21 @@
                 text-align: center;
             }
 
+            .bank-info-title {
+                font-size: 3.5em;
+                margin: 0.6em 0;
+                text-align: center;
+            }
+
             .bank-info {
                 background-color: #2F323A;
                 color: #bbb;
-                padding: 3em 5em;
+                padding: 2em 4em;
             }
 
             .login-form {
                 background-color: #fff;
-                padding: 3em 5em;
+                padding: 2em 4em;
             }
         }
     }
